# llm-tagger-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  cspell.json  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 032f68276466_create_taxonomy_tables.py  13f9bb00e29d_add_tag_results_table.py
scripts/: clickhouse-config.xml  entrypoint.sh  seed_taxonomy.py
src/tagging/: config.py
src/tagging/api/: app.py  dependencies.py  schemas.py
src/tagging/api/routers/: health.py  rules.py  tagging.py  taxonomy.py
src/tagging/application/: interfaces.py  orchestrator.py  pipeline.py  rules_engine.py
src/tagging/domain/: enums.py  models.py  note_context.py  tag.py  tag_category.py  tag_result.py  tag_rule.py  tag_rule_condition.py
src/tagging/domain/enums/: __init__.py  condition_operator.py  condition_type.py  llm_provider.py  tag_source.py  tagging_mode.py
src/tagging/infrastructure/: observability.py
src/tagging/infrastructure/db/: models.py  repository.py
src/tagging/infrastructure/llm/: chain.py  factory.py  prompts.py
src/tagging/infrastructure/llm/templates/: system.md  user.md
src/tagging/worker/: __init__.py  main.py
tests/integration/: test_repository.py
tests/unit/: test_api_schemas.py  test_config.py  test_db_models.py  test_domain_models.py  test_enums.py  test_health_router.py  test_interfaces.py  test_llm_chain.py  test_llm_factory.py  test_llm_prompts.py  test_note_context.py  test_observability.py  test_orchestrator.py  test_pipeline.py  test_rules_engine.py  test_rules_router.py  test_tag.py  test_tag_category.py  test_tag_result.py  test_tag_rule.py  test_tag_rule_condition.py  test_tagging_router.py  test_taxonomy_router.py
