[project]
name = "llm-tagger-api"
version = "0.1.0"
description = "Automated text tagging service using LLM + rules engine"
requires-python = ">=3.12"
dependencies = [
    # --- Web Framework ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",       # [standard] includes uvloop + httptools for performance
    "python-multipart>=0.0.9",         # required for FastAPI form data

    # --- Database ---
    "sqlalchemy[asyncio]>=2.0.0",      # async ORM - critical for 17k req/sec
    "asyncpg>=0.29.0",                 # async PostgreSQL driver (fastest available)
    "alembic>=1.13.0",                 # database migrations

    # --- Cache & Queue ---
    "redis[hiredis]>=5.0.0",           # [hiredis] = C parser, ~10x faster than pure Python
    "arq>=0.25.0",                     # async job queue built on Redis

    # --- LangChain + Providers ---
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",         # Ollama provider (home / local)
    "langchain-openai>=0.2.0",         # OpenAI + Azure OpenAI provider
    "langchain-anthropic>=0.3.0",      # Anthropic provider

    # --- Observability ---
    "langfuse>=2.0.0",                 # LLM tracing (self-hosted)
    "prometheus-fastapi-instrumentator>=7.0.0",  # Prometheus metrics for scale monitoring

    # --- Config & Validation ---
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",        # settings from env vars
    "python-dotenv>=1.0.0",

    # --- Resilience ---
    "tenacity>=8.2.0",                 # retry logic for LLM calls and DB connections
]

[project.optional-dependencies]
dev = [
    # --- Testing ---
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",          # async test support
    "pytest-cov>=5.0.0",              # coverage reports
    "pytest-xdist>=3.5.0",            # parallel test execution
    "httpx>=0.27.0",                   # async test client for FastAPI
    "testcontainers[postgres,redis]>=4.0.0",  # real DB/Redis in integration tests

    # --- Mocking ---
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",                   # mock httpx requests

    # --- Load Testing ---
    "locust>=2.20.0",                  # load testing (17k req/sec validation)

    # --- Code Quality ---
    "ruff>=0.3.0",                     # linter + formatter (replaces black + flake8)
    "mypy>=1.9.0",                     # type checking
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tagging"]

# --- pytest configuration ---
[tool.pytest.ini_options]
asyncio_mode = "auto"                  # all async tests run automatically
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--cov=src/tagging",               # measure coverage on our source
    "--cov-report=term-missing",       # show missing lines in terminal
    "--cov-report=html:coverage-html", # HTML report for detailed review
    "--cov-fail-under=80",             # fail if coverage drops below 80%
    "-v",                              # verbose output
]
markers = [
    "unit: pure unit tests, no I/O",
    "integration: requires real DB and Redis",
    "contract: API schema validation tests",
    "slow: tests that take more than 1 second",
]

# --- ruff linter configuration ---
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear (catches common bugs)
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade (modern Python syntax)
]
ignore = [
    "E501",  # line too long (ruff format handles this)
]

# --- mypy type checking ---
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

# --- coverage configuration ---
[tool.coverage.run]
source = ["src/tagging"]
omit = [
    "*/migrations/*",
    "*/alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
